
== Enhancements ==
    * If cookie value is in JSON or XML format there is an additional tab
      displaying JSON as exapandable tree or pretty printed XML (issue 44).
    * Column sorting is now remembered across Firefox sessions (issue 37).
    * Support for better formatting of document.cookie property when used
      on the Firebug's command line (the Console panel).

== Localization ==
    * ja-JP localization - contribution by Hisateru Tanaka
    * ru-RU localization - contribution by Dark Preacher
    * ro-RO localization - contribution by alexxed
    * zh-CN localization - contribution by Hector Zhao
    * hu-HU localization - contribution by gLes
    * es-AR localization - contribution by eternoendless
    * uk-UA localization - contribution by Andriy Zhouck
    * it-IT localization - contribution by l0stintranslation
    * sv-SE localization - contribution by peter3

== Bug Fixes ==
    Issue 23: httpOnly cookies
    Issue 34: firecookie 0.8 cookies with .domain.com the first period gets erased on editing any attribute
    Issue 37: Cookies sort order remember? (Enhancement/UI)
    Issue 39: Can't create cookies with ';' in it
    Issue 42: no way to wrap/hide columns
    Issue 43: Sort by Expire Date
    Issue 44: JSON Cookies view
    Issue 45: When I copy and paste or edit a cookie contents + (plus) signs get converted to spaces.
    Issue 46: Last character of cookie name is missing on Net panel in Sent cookies
    Issue 49: Firecookie incompatible with Firefox 3.5.1
    Issue 47: Cannot change the HttpOnly flag

Release Notes for Firecookie 0.8
--------------------------------

== Enhancements ==
    * Each entry in the Net panel contains additional info about received and sent 
      cookies (issue 27)
    * It is possible to export all cookie (or cookies for the current site only) into
      a cookies.txt file (using the standard format of this file)

== Bug Fixes ==
    * Issue 18: Unescape cookie values